<resources>
    <string name="app_name">LoginRegistrationDemo</string>

    <string name="enter_your_name_here">Enter your name here!</string>
    <string name="gender">Gender :</string>
    <string name="create_account">Create Account</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="login">Login</string>
    <string name="not_a_user_sign_up">Not a user ? Sign Up</string>
    <string name="name">Name :</string>
    <string name="password">Password :</string>
    <string name="account_details">Account Details :</string>

</resources>