<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/black"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@android:dimen/app_icon_size"
        android:paddingBottom="@android:dimen/app_icon_size"
        app:srcCompat="@mipmap/saurav" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="5sp"
        android:paddingLeft="30sp"
        android:hint="@string/name"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/rGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:paddingLeft="30sp"
            android:text="@string/gender"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15sp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup" >

                <RadioButton
                    android:id="@+id/rB1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white"
                    android:checked="false"
                    android:text="@string/male"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rB2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white"
                    android:checked="false"
                    android:text="@string/female"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@android:color/white"
        android:hint="Email : "
        android:textColorHint="@android:color/white"
        android:paddingLeft="30sp"
        android:textSize="18sp"
        android:layout_marginTop="5sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@android:color/white"
        android:hint="Password : "
        android:paddingLeft="30sp"
        android:textSize="18sp"
        android:layout_marginTop="5sp"
        android:textColorHint="@android:color/white"

        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="95sp"
        android:layout_marginTop="50sp"
        android:onClick="onClick"
        android:paddingLeft="15sp"
        android:paddingTop="15sp"
        android:paddingRight="15sp"
        android:paddingBottom="15sp"
        android:text="@string/create_account"
        android:textSize="22sp"
        android:textStyle="normal" />


</androidx.appcompat.widget.LinearLayoutCompat>